# bottle-suite

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
client/: jsconfig.json  nuxt.config.js  package-lock.json  package.json
client/components/: Toast.vue
client/layouts/: default.vue
client/pages/: config.vue  index.vue  login.vue
client/pages/resources/: _id.vue  index.vue
client/store/: index.js  resources.js
example/: app.py  bottle_suite.toml  example.db
example/resources/: invoices.py  playlist_track.py
src/bottle_suite/: __init__.py  bottle_suite.py  reload.py  resource_factory.py  resources.py
src/bottle_suite/dashboard/resources/: token.py
src/bottle_suite/plugins/: README.md
src/scripts/: app.py  create.py  hello_world.py
tests/: bottle_suite.toml  resources.db  test_bottle_suite.py  test_resource_factory.py
tests/resources/: file_resource.py
